[package]
name = "ironx_core"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = { workspace = true }
serde = { workspace = true, features = [] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
